compiler/testData/diagnostics/tests/multiplatform/incompatibles.kt
// IGNORE_FIR_DIAGNOSTICS
// RUN_PIPELINE_TILL: FIR2IR
// COMPARE_WITH_LIGHT_TREE
// MODULE: common
<!INCOMPATIBLE_MODIFIERS, INCOMPATIBLE_MODIFIERS{JVM}!>expect<!> <!INCOMPATIBLE_MODIFIERS, INCOMPATIBLE_MODIFIERS{JVM}!>actual<!> class <!ACTUAL_WITHOUT_EXPECT{JVM}, NO_ACTUAL_FOR_EXPECT{JVM}!>Sixth<!>

// MODULE: platform()()(common)
